product category ui

--- a/ecommerce-frontend/src/app/globals.css
+++ b/ecommerce-frontend/src/app/globals.css
@@ -23,4 +23,36 @@ body {
   background: var(--foreground);
   color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+}
+
+.container {
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
+
+/* CategoryCard.css */
+.gradient-border {
+  border: 2px solid transparent;
+  border-radius: 8px !important;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.gradient-border:hover {
+  border-image: linear-gradient(to bottom, rgb(247, 79, 172), rgb(252, 178, 79))
+    3;
+  border-radius: 12px !important;
+  box-shadow: 0px 4px 6px -2px #10182808, 0px 12px 16px -4px #10182814;
+}
+
+.myComponent:hover {
+  box-shadow: 0px 4px 6px -2px rgba(16, 24, 40, 0.03), 0px 12px 16px -4px rgba(16, 24, 40, 0.08);
+}
+
+.put:focus {
+  box-shadow: 0px 0px 0px 4px #F4EBFF !important;;
+  /*box-shadow: 0px 0px 0px -12px rgba(230, 127, 203, 1) */
+  border-color: #E67FCA!important;
 }
