--- a/ecommerce-frontend/src/app/globals.css
+++ b/ecommerce-frontend/src/app/globals.css
@@ -56,3 +56,7 @@ body {
   /*box-shadow: 0px 0px 0px -12px rgba(230, 127, 203, 1) */
   border-color: #E67FCA!important;
 }
+
+.myBtn:hover{
+  box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+}
