--- a/ecommerce-frontend/src/app/globals.css
+++ b/ecommerce-frontend/src/app/globals.css
@@ -19,6 +19,21 @@
   }
 }
 
+/* SCROLLBAR */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f2f2f2;
+  border-radius: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--background);
+  border-radius: 20px;
+}
+
 body {
   background: var(--foreground);
   color: var(--background);
